newtype-tools/tests/trybuild/ops/div.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/trybuild/ops/div.rs:5:19
  |
5 |     #[newtype(div())]
  |                   ^

error: expected `,`
  --> tests/trybuild/ops/div.rs:11:22
   |
11 |     #[newtype(div(u64))]
   |                      ^

error: unexpected end of input, expected `output`
  --> tests/trybuild/ops/div.rs:17:23
   |
17 |     #[newtype(div(u64,))]
   |                       ^

error: expected `=`
  --> tests/trybuild/ops/div.rs:23:30
   |
23 |     #[newtype(div(u64, output))]
   |                              ^

error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/trybuild/ops/div.rs:29:32
   |
29 |     #[newtype(div(u64, output =))]
   |                                ^

error: expected `,`
  --> tests/trybuild/ops/div.rs:35:36
   |
35 |     #[newtype(div(u64, output = u64))]
   |                                    ^

error: unexpected end of input, expected `with`
  --> tests/trybuild/ops/div.rs:41:37
   |
41 |     #[newtype(div(u64, output = u64,))]
   |                                     ^

error: expected `=`
  --> tests/trybuild/ops/div.rs:47:42
   |
47 |     #[newtype(div(u64, output = u64, with))]
   |                                          ^

error: unexpected end of input, expected an expression
  --> tests/trybuild/ops/div.rs:53:44
   |
53 |     #[newtype(div(u64, output = u64, with =))]
   |                                            ^
